src/_includes/assets/css/screen.css
/* ... */
.no-image .post-full-content {
    padding-top: 0;
}

.no-image .post-full-content:before,
.no-image .post-full-content:after {
    display: none;
}

.post-full-content h1,
.post-full-content h2,
.post-full-content h3,
.post-full-content h4,
.post-full-content h5,
.post-full-content h6,
.post-full-content p,
.post-full-content ul,
.post-full-content ol,
.post-full-content dl,
.post-full-content pre,
.post-full-content blockquote,
.post-full-comments,
.footnotes {
    min-width: 100%;
}

.post-full-content h2:target,
.post-full-content h3:target {
    scroll-margin-top: calc(var(--header-height) + 0.5em);
}

.post-full-content li {
    word-break: break-word;
}

.post-full-content li p {
    margin: 0;
}

.post-full-content a {
    color: var(--gray90);
    word-break: break-word;
    text-decoration: underline;
}

.post-full-content a:hover {
    text-decoration: none;
}

.post-full-content strong,
.post-full-content em {
    color: var(--gray85);
}

.post-full-content small {
    display: inline-block;
    line-height: 1.6em;
}

.post-full-content li:first-child {
    margin-top: 0;
}

.post-full-content img,
.post-full-content video {
    display: block;
    margin: 1.5em auto;
    max-width: 100%;
    height: auto;
}

/* Full bleed images (#full)
Super neat trick courtesy of @JoelDrapper

Usage (In Ghost edtior):

![img](/some/image.jpg#full)

*/
.post-full-content img[src$="#full"] {
    max-width: none;
    width: 100vw;
}

/* Image captions

Usage (In Ghost editor):

![img](/some/image.jpg)
<small>Your image caption</small>

*/
.post-full-content img + br + small {
    display: block;
    margin-top: -3em;
    margin-bottom: 1.5em;
    text-align: center;
}

/* Override third party iframe styles */
.post-full-content iframe :not(.runkit-element) {
    margin: 0 auto !important;
}

.post-full-content blockquote {
    margin: 0 0 1.5em;
    padding: 0 1.5em;
    border-left: var(--dark-blue) 3px solid;
}

.post-full-content blockquote p {
    margin: 0 0 1em 0;
    color: inherit;
    font-size: inherit;
    line-height: inherit;
    font-style: italic;
}

.post-full-content blockquote p:last-child {
    margin-bottom: 0;
}

.post-full-content code {
    padding: 0 5px 2px;
    font-size: 0.8em;
    line-height: 1em;
    font-weight: 400 !important;
    background: var(--gray15);
}

.post-full-content p code {
    word-break: break-all;
}

.post-full-content pre {
    overflow-x: auto;
    margin: 1.5em 0 3em;
    padding: 20px;
    max-width: 100%;
    color: var(--gray85);
    font-size: 1.4rem;
    line-height: 1.5em;
    background: var(--gray05);
}

.post-full-content pre code {
    padding: 0;
    font-size: inherit;
    line-height: inherit;
    background: transparent;
}

.post-full-content pre code :not(span) {
    color: inherit;
}

.post-full-content .fluid-width-video-wrapper {
    margin: 1.5em 0 3em;
}

.post-full-content hr {
    margin: 4vw 0;
    border-top: 1px solid var(--gray15);
}

.post-full-content hr:after {
    content: "";
    position: absolute;
    top: -15px;
    left: 50%;
    display: block;
    margin-left: -10px;
    width: 1px;
    height: 30px;
    background: var(--gray15);
    box-shadow: #fff 0 0 0 5px;
    transform: rotate(45deg);
}

.post-full-content h1,
.post-full-content h2,
.post-full-content h3,
.post-full-content h4,
.post-full-content h5,
.post-full-content h6 {
    color: var(--gray85);
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
    font-display: swap;
}

.post-full-content h1 {
    margin: 0.5em 0 0.2em 0;
    font-size: 4.6rem;
    font-weight: 700;
}
@media (max-width: 500px) {
    .post-full-content h1 {
        font-size: 2.8rem;
    }
}

.post-full-content h2 {
    margin: 0.5em 0 0.2em 0;
    font-size: 3.6rem;
    font-weight: 700;
}
@media (max-width: 500px) {
    .post-full-content h2 {
        font-size: 2.6rem;
    }
}

.post-full-content h3 {
    margin: 0.5em 0 0.2em 0;
    font-size: 2.8rem;
    font-weight: 700;
}
@media (max-width: 500px) {
    .post-full-content h3 {
        font-size: 2.2rem;
    }
}

.post-full-content h4 {
    margin: 0.5em 0 0.2em 0;
    font-size: 2.8rem;
    font-weight: 700;
}
@media (max-width: 500px) {
    .post-full-content h4 {
        font-size: 2.2rem;
    }
}

.post-full-content h5 {
    display: block;
    margin: 0.5em 0;
    padding: 1em 0 1.5em;
    border: 0;
    color: var(--dark-blue);
    font-family: "Lato", sans-serif;
    font-display: swap;
    font-size: 3.2rem;
    line-height: 1.35em;
    text-align: center;
}
@media (min-width: 1180px) {
    .post-full-content h5 {
        max-width: 1060px;
        width: 100vw;
    }
}
@media (max-width: 500px) {
    .post-full-content h5 {
        padding: 0 0 0.5em;
        font-size: 2.2rem;
    }
}

.post-full-content h6 {
    margin: 0.5em 0 0.2em 0;
    font-size: 2.3rem;
    font-weight: 700;
}
@media (max-width: 500px) {
    .post-full-content h6 {
        font-size: 2rem;
    }
}

.footnotes-sep {
    margin-bottom: 30px;
}

.footnotes {
    font-size: 1.5rem;
}

.footnotes p {
    margin: 0;
}

.footnote-backref {
    color: var(--dark-blue) !important;
    font-size: 1.2rem;
    font-weight: bold;
    text-decoration: none !important;
    box-shadow: none !important;
}

/* Some grouped styles for smaller viewports */
@media (max-width: 500px) {
    .post-full-meta {
        font-size: 1.2rem;
        line-height: 1.3em;
    }
    .post-full-title {
        font-size: 2.9rem;
    }
    .post-full-image {
        margin-bottom: 4vw;
    }
    .post-full-content:before,
    .post-full-content:after {
        display: none;
    }
}
/* ... */

